--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "korzina-front",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel src/index.pug --open -p 3000 --dist-dir build --no-cache",
@@ -13,12 +12,15 @@
   "license": "ISC",
   "dependencies": {
     "parcel": "^2.6.2",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "rimraf": "^3.0.2"
   },
   "devDependencies": {
     "@parcel/transformer-pug": "^2.6.2",
     "@parcel/transformer-sass": "^2.6.2",
     "jake": "^10.8.5",
+    "lodash.escaperegexp": "^4.1.2",
+    "replace-in-file": "^6.3.5",
     "sass": "^1.53.0"
   }
 }
