swiper navigation bullets added

--- a/data/courses/AppliedInformaticsBach.json
+++ b/data/courses/AppliedInformaticsBach.json
@@ -376,7 +376,7 @@
             ]
         },
         {
-            "link": "/profiles/AppliedInformaticsBach.html/?index=1",
+            "link": "/profiles/AppliedInformaticsBach.html?index=1",
             "profileName": "Управление данными",
             "ico": "/assets/icons/profiles/manageData.svg",
             "description": "Студенты получают теоретическую и практическую подготовку в сфере технологий формирования, обработки, хранения, поиска и анализа данных, применяемых при проектировании, разработке и эксплуатации информационных систем, обеспечивающих деятельность и бизнес-процессы государственных структур, производственных и непроизводственных предприятий.\n\nОсобое внимание уделяется изучению лучших отечественных и зарубежных практик, основанных на российских и международных стандартах проектирования и разработки хранилищ данных, а также методам анализа больших данных, прикладному применению прогнозно-аналитических систем и систем управления данными.",
@@ -740,7 +740,7 @@
             ]
         },
         {
-            "link": "/profiles/AppliedInformaticsBach.html/?index=2",
+            "link": "/profiles/AppliedInformaticsBach.html?index=2",
             "profileName": "Цифровая трансформация",
             "ico": "/assets/icons/profiles/digitalTransform.svg",
             "description": "Студенты получают подготовку в сфере технологий обработки данных, проектирования архитектур приложений и данных, микросервисов, интеграции и развертывания, информационно-технологических и корпоративных архитектур для государственных структур, производственных и непроизводственных предприятий. \n\nОсобое внимание уделяется изучению отечественных и зарубежных практик построения информационно-технологических и корпоративных архитектур, внедрения современных цифровых технологий в различные направления и виды деятельности государственных и коммерческих организаций, корпоративных и государственных структур.",
