added logic to save enable and disable compare buttons at profile

--- a/data/courses/AppliedInformaticsBach.json
+++ b/data/courses/AppliedInformaticsBach.json
@@ -13,6 +13,7 @@
     "profiles": [
         {
             "link": "/profiles/AppliedInformaticsBach.html",
+            "className": "infOrg",
             "profileName": "Информатизация организаций",
             "ico": "/assets/icons/profiles/inforOrg.svg",
             "description": "Студенты получают подготовку в сфере технологий обработки данных, проектирования, разработки и эксплуатации информационных систем и хранилищ данных, обеспечивающих деятельность и бизнес-процессы государственных структур, производственных и непроизводственных предприятий.\n\nЛаборатории оснащены современным компьютерным, сетевым, мультимедийным и офисным оборудованием, обеспечивающим учебный процесс, самостоятельную подготовку, а также инициативные и плановые исследовательские проекты и разработки. Особое внимание уделяется изучению лучших отечественных и зарубежных практик, основанных на стандартах моделирования, проектирования и разработки бизнес-процессов, хранилищ данных, архитектуры информационных систем и программного обеспечения.",
@@ -377,6 +378,7 @@
         },
         {
             "link": "/profiles/AppliedInformaticsBach.html?index=1",
+            "className": "dataControl",
             "profileName": "Управление данными",
             "ico": "/assets/icons/profiles/manageData.svg",
             "description": "Студенты получают теоретическую и практическую подготовку в сфере технологий формирования, обработки, хранения, поиска и анализа данных, применяемых при проектировании, разработке и эксплуатации информационных систем, обеспечивающих деятельность и бизнес-процессы государственных структур, производственных и непроизводственных предприятий.\n\nОсобое внимание уделяется изучению лучших отечественных и зарубежных практик, основанных на российских и международных стандартах проектирования и разработки хранилищ данных, а также методам анализа больших данных, прикладному применению прогнозно-аналитических систем и систем управления данными.",
@@ -741,6 +743,7 @@
         },
         {
             "link": "/profiles/AppliedInformaticsBach.html?index=2",
+            "className": "digitalTransform",
             "profileName": "Цифровая трансформация",
             "ico": "/assets/icons/profiles/digitalTransform.svg",
             "description": "Студенты получают подготовку в сфере технологий обработки данных, проектирования архитектур приложений и данных, микросервисов, интеграции и развертывания, информационно-технологических и корпоративных архитектур для государственных структур, производственных и непроизводственных предприятий. \n\nОсобое внимание уделяется изучению отечественных и зарубежных практик построения информационно-технологических и корпоративных архитектур, внедрения современных цифровых технологий в различные направления и виды деятельности государственных и коммерческих организаций, корпоративных и государственных структур.",
