--- a/data/courses/AppliedMathMaster.json
+++ b/data/courses/AppliedMathMaster.json
@@ -14,6 +14,7 @@
         {
             "link": "/profiles/AppliedMathMaster.html",
             "profileName": "Интеллектуальный анализ данных",
+            "className": "intDataAnalyse",
             "ico": "/assets/icons/profiles/analyseData.svg",
             "description": "Профессиональная деятельность выпускников включает применение, разработку и исследование программного обеспечения, а также математических методов и моделей, предназначенных для анализа, выработки и подготовки решений во всех сферах деятельности и в конкретных предметных областях. Углублённо изучаются классические математические дисциплины, современные концепции и методы прикладной и вычислительной математики, методы математического моделирования и анализа данных применительно к различным предметным областям: экономике, физике, технике, исследованию природных процессов и т.д.",
             "important": "выбор профиля обучения осуществляется студентом после окончания первого курса обучения. Распределение происходит на основе успеваемости студента.",
