added compare card layout

--- a/data/courses/AppliedInformaticsMaster.json
+++ b/data/courses/AppliedInformaticsMaster.json
@@ -14,6 +14,10 @@
         {
             "link": "/profiles/AppliedInformaticsMaster.html",
             "className": "kis",
+            "courseName": "Прикладная информатика",
+            "grade": "Магистратура",
+            "cipher": "09.04.03",
+            "price": "226 000 рублей",
             "profileName": "Корпоративные и распределенные информационные системы",
             "ico": "/assets/icons/profiles/kis.svg",
             "important": "выбор профиля обучения осуществляется студентом после окончания первого курса обучения. Распределение происходит на основе успеваемости студента.",
