--- a/data/courses/AppliedMathBach.json
+++ b/data/courses/AppliedMathBach.json
@@ -14,6 +14,10 @@
         {
             "link": "/profiles/AppliedMathBach.html",
             "className": "dataAnalyse",
+            "courseName": "Прикладная математика",
+            "grade": "Бакалавриат",
+            "cipher": "01.03.04",
+            "price": "222 000 рублей",
             "profileName": "Анализ данных",
             "ico": "/assets/icons/profiles/analyseData.svg",
             "description": "В ходе обучения студенты получают подготовку в сфере технологий обработки, хранения, поиска и анализа данных, полученных в различных прикладных областях. \n\nОбучение включает получение навыков применения специализированных программных средств и математических методов с целью выявления закономерностей и зависимостей, прогнозирования тенденций и значений параметров, составления аналитических обзоров и справок, подготовки управленческих решений и материалов бизнес-аналитики. Студенты, проходящие обучение по программе, имеют доступ к современным учебным лабораториям, иностранному и отечественному специализированному программному обеспечению, большим объёмам экспериментальных данных в сферах экономики, физики, техники, природных процессов и т.д.",
