Update nginx index file

--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -19,7 +19,7 @@ http {
     listen       9000;
     location / {
       root   /app;
-      index  app.js;
+      index  index.html;
       try_files $uri $uri/ /index.html;
 
       add_header 'Access-Control-Allow-Origin' '*';
